--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,15 +2,19 @@
   <div class="container">
     <div class="header__nav">
       <a class="logo" href="#">
-        <img srcset="
+        <img
+          srcset="
             ./images/logo/desktop_logo@2x.webp 120w,
             ./images/logo/desktop_logo@1x.webp  60w,
             ./images/logo/tablet_logo@2x.webp   96w,
             ./images/logo/tablet_logo@1x.webp   48w,
             ./images/logo/mobile_logo@2x.webp   80w,
             ./images/logo/mobile_logo.webp      40w
-          " src="./images/logo/mobile_logo.png"
-          sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (max-width: 767px) 40px, 100vw" alt="логотип" />
+          "
+          src="./images/logo/mobile_logo.png"
+          sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (max-width: 767px) 40px, 100vw"
+          alt="логотип"
+        />
       </a>
 
       <ul class="site-nav">
@@ -28,13 +32,21 @@
         </li>
       </ul>
 
-      <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+      <button
+        class="menu-toggle js-open-menu"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
         <svg class="menu-toggle__icon" width="32" height="32">
           <use href="./images/icons.svg#burger"></use>
         </svg>
       </button>
 
-      <button class="header_button header_button--geometry js-open-modal" type="button" data-modal="1">
+      <button
+        class="header_button header_button--geometry js-open-modal"
+        type="button"
+        data-modal="1"
+      >
         Buy now
         <svg class="header_button__icon" width="6" height="9">
           <use href="./images/icons.svg#button_vector"></use>
@@ -54,31 +66,43 @@
   </button>
 
   <a class="logo" href="#">
-    <img srcset="
+    <img
+      srcset="
         ./images/logo/tablet_logo@2x.webp 96w,
         ./images/logo/tablet_logo@1x.webp 48w,
         ./images/logo/mobile_logo@2x.webp 80w,
         ./images/logo/mobile_logo.webp    40w
-      " src="./images/logo/mobile_logo.png" sizes="(min-width: 321px) 48px, (max-width: 320px) 40px, 100vw"
-      alt="логотип" />
+      "
+      src="./images/logo/mobile_logo.png"
+      sizes="(min-width: 321px) 48px, (max-width: 320px) 40px, 100vw"
+      alt="логотип"
+    />
   </a>
 
   <ul class="mobile-menu">
     <li class="mobile-menu__item">
-      <a href="/index" class="mobile-menu__link">Home</a>
+      <a href="/index" class="mobile-menu__link js-close-menu">Home</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#about" class="mobile-menu__link">How it’s made?</a>
+      <a href="#about" class="mobile-menu__link js-close-menu"
+        >How it’s made?</a
+      >
     </li>
     <li class="mobile-menu__item">
-      <a href="#products" class="mobile-menu__link">Our products</a>
+      <a href="#products" class="mobile-menu__link js-close-menu"
+        >Our products</a
+      >
     </li>
     <li class="mobile-menu__item">
-      <a href="./contacts" class="mobile-menu__link">Contact</a>
+      <a href="./contacts" class="mobile-menu__link js-close-menu">Contact</a>
     </li>
   </ul>
 
-  <button class="header_button header_button--menu js-open-modal" type="button" data-modal="1">
+  <button
+    class="header_button header_button--menu js-open-modal js-close-menu"
+    type="button"
+    data-modal="1"
+  >
     Buy now
     <svg class="header_button__icon" width="6" height="9">
       <use href="./images/icons.svg#button_vector"></use>
