--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,7 +2,36 @@
   background-color: var(--primary-bg);
 
 }
+.logo {
+  animation: rubberBand 2s infinite;
+  max-width: 120px;
+}
 
+@keyframes rubberBand {
+  0% {
+    transform: scale3d(1, 1, 1);
+  }
+
+  35% {
+    transform: scale3d(1.1, 0.85, 1);
+  }
+
+  45% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+
+  60% {
+    transform: scale3d(1.1, 0.85, 1);
+  }
+
+  75% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
+}
 .logo_bounce {
   animation-duration: 2s;
   animation-fill-mode: both;
